--- a/app/src/main/res/layout-v31/activity_main.xml
+++ b/app/src/main/res/layout-v31/activity_main.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/system_accent1_100"
-    tools:context=".SignInActivity"
-    tools:targetApi="s">
+    tools:context=".SignInActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -116,13 +115,11 @@
         android:id="@+id/buttonSIGN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="buttonSIGN"
         android:text="SIGNIN"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editPass"
-        tools:ignore="OnClick" />
+        app:layout_constraintTop_toBottomOf="@+id/editPass" />
 
     <TextView
         android:id="@+id/textView10"
