--- a/app/src/main/res/layout-v31/activity_login.xml
+++ b/app/src/main/res/layout-v31/activity_login.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/system_accent1_100"
-    tools:context=".LoginActivity"
-    tools:targetApi="s">
+    tools:context=".LoginActivity">
 
     <TextView
         android:id="@+id/textView5"
@@ -58,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
-        android:onClick="buttonLOGIN"
+        android:onClick="buttonLOG"
         android:text="LOGIN"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
