--- a/app/src/main/res/layout-v31/activity_login.xml
+++ b/app/src/main/res/layout-v31/activity_login.xml
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
-        android:onClick="buttonLOG"
+        android:onClick="buttonLOGIN"
         android:text="LOGIN"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
