--- a/app/src/main/res/layout/activity_my_record.xml
+++ b/app/src/main/res/layout/activity_my_record.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#101010"
-    tools:context=".StartGameActivity">
+    tools:context=".MyRecordActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
